--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,19 @@
   margin: 0 auto;
   text-align: center;
 }
+
+body {
+  background: rgba(255, 255, 255, 0) !important;
+}
+#pattern {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+
+  background-color: #f4f8fb;
+  background-image: radial-gradient(#7f1d1d 0.5px, transparent 0.5px),
+    radial-gradient(#7f1d1d 0.5px, #f4f8fb 0.5px);
+  background-size: 20px 20px;
+  background-position: 0 0, 10px 10px;
+}
